Fixing responsive design on mobiles

--- a/src/styles/globalstyles.scss
+++ b/src/styles/globalstyles.scss
@@ -25,6 +25,7 @@ body {
 .flex {
   display: flex;
   position: relative;
+  min-height: 100vh;
   @media (max-width: 650px) {
     flex-direction: column;
   }
