--- a/src/styles/settingsContainer.scss
+++ b/src/styles/settingsContainer.scss
@@ -1,6 +1,5 @@
 .main {
   width: 80vw;
-  height: 100vh;
   background-color: $blue;
   position: absolute;
   right: 0;
